JWT config & login/register validation

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -6,6 +6,7 @@
       <input
         pInputText
         id="email"
+        type="email"
         minlength="6"
         [(ngModel)]="clientLogin.email"
         #name="ngModel"
