--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -7,7 +7,7 @@
     <label for="name">Name</label>
   </p-floatLabel>
   <p-floatLabel>
-    <input pInputText id="email" [(ngModel)]="client.email" />
+    <input pInputText id="email" [(ngModel)]="client.email" type="email"/>
     <label for="email">Email</label>
   </p-floatLabel>
   <p-floatLabel>
