--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <section class="form-section">
   <div class="side-img" [style]="backgroundImage"></div>
   <div class="form-group">
-    <h2 class="gradient-text">Welcome to Grue Solutions</h2>
+    <h2 class="gradient-text">Bienvenido a Soluciones y Gruas</h2>
     <p-floatLabel>
       <input
         pInputText
