feature: Frontend UX/UI for grues and landing page

--- a/frontend/src/app/dashboard/dashboard.component.css
+++ b/frontend/src/app/dashboard/dashboard.component.css
@@ -1,7 +1,12 @@
-.dashboard-container {
-  padding: 2rem;
+.dashboard-container{
+  display: flex;
+  padding: 1rem;
+  gap: .5rem;
+  
 }
 
-.p-field {
-  margin-bottom: 1rem;
+@media (max-width: 768px) {
+  .dashboard-container{
+    flex-direction: column;
+  }   
 }
