--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -17,3 +17,54 @@ body{
   align-items: center;
   width: 100%;
 }
+
+.items-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.item-card{
+  display: flex;
+  width: 100%;
+  border: 1px solid rgba(0,0,0,0.1);
+  padding: .3rem;
+  border-radius: 10px;
+  text-align: center;
+  transition: all .2s ease-in;
+}
+
+.item-card:hover{
+  opacity: 0.9;
+  border: 1px solid rgba(0,0,0,0.3);
+}
+.item-card h2{
+  color: rgba(0,0,0,0.7);
+}
+.item-card-header{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.item-card-header img{
+  width: 240px;
+  contain: content;
+}
+.item-card-body{
+  width: 50vw;
+  padding: .5rem;
+}
+.item-card-footer{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .item-card{
+    flex-direction: column;
+  }
+  .item-card-body{
+    width: 100%;
+  }
+}
