--- a/frontend/src/app/rents/rents.component.html
+++ b/frontend/src/app/rents/rents.component.html
@@ -1,1 +1,28 @@
-<p>rents works!</p>
+<div class="rent-container">
+  <p-table [value]="$rentsList" [paginator]="true" [rows]="10" [responsiveLayout]="'scroll'">
+    <ng-template pTemplate="header">
+      <tr>
+        <th>Grue ID</th>
+        <th>Start Date</th>
+        <th>End Date</th>
+        <th>Total Price</th>
+        <th>Status</th>
+        <th>Created At</th>
+        <th>Updated At</th>
+        <th>Client Email</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-rent>
+      <tr>
+        <td>{{ rent.grue?.id }}</td>
+        <td>{{ rent.startDate | date }}</td>
+        <td>{{ rent.endDate | date }}</td>
+        <td>{{ rent.totalPrice }}€</td>
+        <td>{{ rent.status }}</td>
+        <td>{{ rent.createdAt | date }}</td>
+        <td>{{ rent.updatedAt | date }}</td>
+        <td>{{ rent.client?.email }}</td>
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
